--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "armanzarkalam.github.io",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://armanzarkalam.github.io/react-gh-pages",
+  "homepage": "https://armanzarkalam.github.io/armansworld",
   "type": "module",
   "scripts": {
     "dev": "vite",
